# bot-threema

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  config.toml.example
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docker.yml
examples/: dump_chart.rs
src/: api.rs  chart.rs  config.rs  handler.rs  lib.rs  main.rs
src/chart/: interpolation.rs  render.rs  style.rs
src/snapshots/: gfroerli_bot__api__tests__format_list_entry__basic.snap  gfroerli_bot__api__tests__format_sponsor_list_text__filters_non_sponsor_types.snap  gfroerli_bot__api__tests__format_sponsor_list_text__singular_and_plural.snap  gfroerli_bot__api__tests__format_sponsor_list_text__sorts_by_count_desc_then_created_at_asc.snap  gfroerli_bot__api__tests__format_temperature__rounds_to_one_decimal.snap  gfroerli_bot__api__tests__format_temperature__with_temp_and_time.snap  gfroerli_bot__api__tests__format_temperature__with_temp_no_time.snap  gfroerli_bot__handler__tests__format_about_text__with_multiple_maintainers.snap  gfroerli_bot__handler__tests__format_about_text__with_single_maintainer.snap  gfroerli_bot__handler__tests__format_about_text__without_maintainers.snap  gfroerli_bot__handler__tests__format_details_text__with_stats_and_current.snap  gfroerli_bot__handler__tests__format_details_text__without_stats.snap  gfroerli_bot__handler__tests__format_sponsor_text__multi_paragraph_description.snap  gfroerli_bot__handler__tests__format_sponsor_text__no_description.snap  gfroerli_bot__handler__tests__format_sponsor_text__powered_by_partner.snap  gfroerli_bot__handler__tests__format_sponsor_text__powered_by_public_data_provider.snap  gfroerli_bot__handler__tests__format_sponsor_text__sponsored_by_with_description.snap  gfroerli_bot__handler__tests__format_stats_text__without_stats.snap  gfroerli_bot__handler__tests__format_temp_response__multiple_matches.snap  gfroerli_bot__handler__tests__format_temp_response__no_match.snap  gfroerli_bot__handler__tests__format_temp_response__single_match.snap  gfroerli_bot__handler__tests__handle_info__returns_project_info.snap  (+13 more)
