[package]
name = "gfroerli-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
async-trait = "0.1"
config = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
threema-gateway-bot = { path = "vendor/threema-gateway-bot" }

[dev-dependencies]
insta = "1"
serde_json = "1"
