[package]
name = "gfroerli-bot"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
chrono-tz = { version = "0.10", default-features = false }
async-trait = "0.1"
config = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
plotters = { version = "0.3", default-features = false, features = ["ab_glyph", "area_series", "bitmap_backend", "bitmap_encoder", "chrono", "line_series"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
threema-gateway = "0.20"
threema-gateway-bot = { path = "vendor/threema-gateway-bot" }

[dev-dependencies]
insta = "1"
rstest = "0.25"
serde_json = "1"
